# opengl-cpp-breakout-game

./: .gitignore  CMakeLists.txt  readme.md
includes/: ball_object.h  game.h  game_level.h  game_object.h  particle_generator.h  power_up.h  shader.h
src/: ball_object.cpp  game.cpp  game_level.cpp  particle_generator.cpp  post_processor.cpp  program.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  text_renderer.cpp
